crates/parser/tests/parser/snapshots/main__parser__parser_tests__tuple_expr.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Tuple:
          elements:
            - Lit:
                value:
                  Int: 1
                span:
                  - 11
                  - 12
            - Lit:
                value:
                  Int: 2
                span:
                  - 14
                  - 15
            - Lit:
                value:
                  Int: 3
                span:
                  - 17
                  - 18
          span:
            - 10
            - 19
      doc: ~
      span:
        - 0
        - 19
