crates/parser/tests/parser/snapshots/main__parser__parser_tests__where_clause.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: compare
      visibility: Private
      type_params: []
      params:
        - name: a
          ty:
            Var:
              name: a
              span:
                - 15
                - 16
          mode: Consume
          span:
            - 12
            - 16
        - name: b
          ty:
            Var:
              name: a
              span:
                - 21
                - 22
          mode: Consume
          span:
            - 18
            - 22
      constraints:
        - trait_name: Ord
          type_args:
            - Var:
                name: a
                span:
                  - 38
                  - 39
          span:
            - 38
            - 44
      return_type:
        Named:
          name: Bool
          span:
            - 27
            - 31
      body:
        BinaryOp:
          op: Lt
          lhs:
            Var:
              name: a
              span:
                - 47
                - 48
          rhs:
            Var:
              name: b
              span:
                - 51
                - 52
          span:
            - 47
            - 52
      doc: ~
      span:
        - 0
        - 52
